--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #5cd560, #2e7cb4);
+  background: linear-gradient(135deg, #5e5cd5, #b22eb4);
   padding: 10px;
 }
 
